# shrink.cpp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.py
src/: CMakeLists.txt
src/shrink/: all.hpp  core.hpp  int.hpp  span.hpp  vec.hpp
test/: CMakeLists.txt  core.unittest.cpp  int.unittest.cpp  shrink.core.unittest.cpp  shrink.unittest.cpp  span.unittest.cpp  test_util.hpp  vec.unittest.cpp
